--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -23,3 +23,33 @@ h6,
 p {
   margin: 0;
 }
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+#portal .portal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.7);
+}
+
+/* .container .modal {
+  z-index: 1;
+  width: 700px;
+  height: 400px;
+  background: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  position: relative;
+  animation: animate 0.3s;
+} */
