--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -30,6 +30,7 @@ ul {
   margin: 0;
 }
 
+/* this sets up the ability to click off the movile nav */
 #portal .portal {
   position: fixed;
   top: 0;
@@ -40,16 +41,3 @@ ul {
   width: 100%;
   background: rgba(0, 0, 0, 0.7);
 }
-
-/* .container .modal {
-  z-index: 1;
-  width: 700px;
-  height: 400px;
-  background: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 5px;
-  position: relative;
-  animation: animate 0.3s;
-} */
